# trlc_enum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  macro_expansion_generator.py
.github/: pull_request_template.md
.github/workflows/: Clang.yml  GCC.yml  MSVC.yml  cmake-multi-platform.yml
cmake/: trlcConfig.cmake.in
example/: CMakeLists.txt  example.cpp
include/common/: enum.hpp
include/common/enum/: field.hpp
include/common/macro/: apply_args.hpp  apply_args_with_index.hpp  count_args.hpp  expand_args_with_index.hpp
include/trlc/: constexpr_utils.hpp  enum.hpp  macro.hpp
include/trlc/enum/: detail.hpp  field.hpp
include/trlc/macro/: append_args.hpp  expand_args.hpp
tests/: CMakeLists.txt  tests.cpp  trlc_enum_tests.cpp
